@@ -1,3 +1,8 @@
+2003-07-23  Takahashi Youichirou <nikuq@hk.airnet.ne.jp>
+
+	* [w3m-dev 03942] Save history
+	* history.c (saveHistory): check tmpfile write error
+
 2003-07-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03941] fix character encoding for 'v'
